starting database integration

--- a/config.json.example
+++ b/config.json.example
@@ -4,5 +4,6 @@
     "guildId": "",
     "clientSecret": "",
     "redirectUri":"",
-    "discordLoginUri":""
+    "discordLoginUri":"",
+    "mongodbPassword": ""
 }
