--- a/package.json
+++ b/package.json
@@ -4,23 +4,26 @@
   "description": "discord bot for music production server. aims to be versatile",
   "main": "./application/ibot/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node ./application/ibot/index.js",
-    "start-server": "node ./application/server/server.js "
+    "start-server": "nodemon ./application/server/server.js "
   },
   "author": "Philip Butler",
   "license": "MIT",
   "dependencies": {
     "@discordjs/builders": "^0.13.0",
     "@discordjs/rest": "^0.4.1",
+    "colors": "^1.4.0",
     "discord-api-types": "^0.33.0",
     "discord.js": "^13.7.0",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "fetch": "^1.1.0",
     "inspector": "^0.5.0",
+    "mongoose": "^6.3.4",
     "url": "^0.11.0"
   },
   "devDependencies": {
-    "eslint": "^8.16.0"
+    "eslint": "^8.16.0",
+    "nodemon": "^2.0.16"
   }
 }
