--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "discord.js": "^13.7.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-async-handler": "^1.2.0",
     "fetch": "^1.1.0",
     "inspector": "^0.5.0",
     "mongoose": "^6.3.4",
