Initial REST API routes set up and connected to mongodb

--- a/config.json.example
+++ b/config.json.example
@@ -3,7 +3,5 @@
     "clientId": "",
     "guildId": "",
     "clientSecret": "",
-    "redirectUri":"",
-    "discordLoginUri":"",
-    "mongodbPassword": ""
+    "discordLoginUri":""
 }
