--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "discord-api-types": "^0.33.0",
     "discord.js": "^13.7.0",
     "dotenv": "^16.0.1",
+    "esm": "^3.2.25",
     "express": "^4.18.1",
     "express-async-handler": "^1.2.0",
     "fetch": "^1.1.0",
+    "gapi": "^0.0.3",
     "inspector": "^0.5.0",
     "mongoose": "^6.3.4",
+    "node-fetch": "^3.2.5",
     "url": "^0.11.0"
   },
   "devDependencies": {
